Students/K0109-23/Gutnik/Practic/7_kub_security/networkpolicies.yaml
---
# 1. Default: запретить весь входящий трафик
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: netpol-demo
spec:
  podSelector: {}  # применить ко ВСЕМ подам
  policyTypes:
  - Ingress
  # ingress: []  — пустой список = ничего не разрешаем
---
# бан от фронта к бд
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: block-frontend-to-database
#  namespace: netpol-demo
#spec:
#  podSelector:
#    matchLabels:
#      role: database
#  policyTypes:
#  - Ingress
#  ingress: []  # пустой список = запретить всё
---
# 2. Разрешить frontend принимать внешний трафик (от ingress)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-ingress
  namespace: netpol-demo
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
  - Ingress
  ingress:
  - {}  # разрешить всем
---
# 3. Backend принимает только от frontend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-from-frontend
  namespace: netpol-demo
spec:
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
---
# 4. Database принимает только от backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database-from-backend
  namespace: netpol-demo
spec:
  podSelector:
    matchLabels:
      role: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: backend
